[gd_scene load_steps=5 format=2]

[ext_resource path="res://Entities/Viruses/NME.gd" type="Script" id=1]
[ext_resource path="res://Entities/Viruses/virus.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 14.4297, 6.42258 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 14.1188, 15.8 )

[node name="Virus" type="Node2D"]
script = ExtResource( 1 )
speed = 63

[node name="virus" type="Sprite" parent="."]
modulate = Color( 1, 0, 0, 1 )
texture = ExtResource( 2 )

[node name="AreaRight" type="Area2D" parent="."]
scale = Vector2( 0.03, 0.03 )
collision_layer = 2
collision_mask = 9

[node name="CollisionRight" type="CollisionShape2D" parent="AreaRight"]
position = Vector2( 1114.23, -47.9085 )
scale = Vector2( 33.3333, 33.3333 )
shape = SubResource( 2 )

[node name="AreaLeft" type="Area2D" parent="."]
scale = Vector2( 0.03, 0.03 )
collision_layer = 2
collision_mask = 9

[node name="CollisionLeft" type="CollisionShape2D" parent="AreaLeft"]
position = Vector2( -1225.38, -57.019 )
scale = Vector2( 33.3333, 33.3333 )
shape = SubResource( 2 )

[node name="AreaUp" type="Area2D" parent="."]
scale = Vector2( 0.03, 0.03 )
collision_layer = 2
collision_mask = 9

[node name="CollisionUp" type="CollisionShape2D" parent="AreaUp"]
position = Vector2( 7.54053, -1134.39 )
rotation = 1.5708
scale = Vector2( 33.3333, 33.3333 )
shape = SubResource( 2 )

[node name="AreaDown" type="Area2D" parent="."]
scale = Vector2( 0.03, 0.03 )
collision_layer = 2
collision_mask = 9

[node name="CollisionDown" type="CollisionShape2D" parent="AreaDown"]
position = Vector2( -11.8872, 1085.91 )
rotation = 1.5708
scale = Vector2( 33.3333, 33.3333 )
shape = SubResource( 2 )

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 20

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( -0.0586165, 4.83017 )
shape = SubResource( 3 )
[connection signal="body_entered" from="AreaRight" to="." method="_on_AreaRight_body_entered"]
[connection signal="body_exited" from="AreaRight" to="." method="_on_AreaRight_body_exited"]
[connection signal="body_entered" from="AreaLeft" to="." method="_on_AreaLeft_body_entered"]
[connection signal="body_exited" from="AreaLeft" to="." method="_on_AreaLeft_body_exited"]
[connection signal="body_entered" from="AreaUp" to="." method="_on_AreaUp_body_entered"]
[connection signal="body_exited" from="AreaUp" to="." method="_on_AreaUp_body_exited"]
[connection signal="body_entered" from="AreaDown" to="." method="_on_AreaDown_body_entered"]
[connection signal="body_exited" from="AreaDown" to="." method="_on_AreaDown_body_exited"]
